сделал CRUD над Product
